--- a/Kolory/Kolory.vcxproj
+++ b/Kolory/Kolory.vcxproj
@@ -127,10 +127,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="gra.cpp" />
+    <ClCompile Include="gracz.cpp" />
+    <ClCompile Include="haslo.cpp" />
+    <ClCompile Include="kolo.cpp" />
     <ClCompile Include="Kolory.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="dane.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="gra.h" />
+    <ClInclude Include="gracz.h" />
+    <ClInclude Include="haslo.h" />
+    <ClInclude Include="kolo.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
