--- a/Kolory/Kolory.vcxproj
+++ b/Kolory/Kolory.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Final.cpp" />
     <ClCompile Include="gra.cpp" />
     <ClCompile Include="gracz.cpp" />
     <ClCompile Include="haslo.cpp" />
